Displaying plan name and created start/stop linux scripts

--- a/participant-management/src/main/resources/static/index.html
+++ b/participant-management/src/main/resources/static/index.html
@@ -60,7 +60,7 @@
 		<script type="text/ng-template" id="view-sponsor">
 		<td class="col-md-3">{{sp.id}}</td>
 		<td class="col-md-3">{{sp.name}}</td>
-		<td class="col-md-3">{{sp.plan.id}}</td>
+		<td class="col-md-3">{{sp.plan.id}}-{{sp.plan.name}}</td>
 		<td class="col-md-3">
 			<button class='btn btn-primary btn-sm' ng-click='sc.edit(sp)'>Edit</button>
 			<button class='btn btn-danger btn-sm' >Terminate</button>
